modified:   .gitignore 	modified:   README.md 	modified:   config/example.yaml 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml 	modified:   model/user_authentication.go 	modified:   model/user_ava_and_introduce.go 	modified:   router/photo_server.go 	modified:   service/user_basic_management.go 	modified:   service/user_info.go
