# service/user_info.go
@@ -94,10 +94,55 @@ func UpdataOrCreateAvatar(PUserTokenBasicInfo crypt.UserTokenBasicInfo, PAvaDir 
 
 }
 
-//func UploadSelfIntroduce(c *gin.Context) {
-//	ItemUserTokenBasicInfo, err := VerifyToken(c)
-//	if err != nil {
-//
-//	}
-//
-//}
+// UploadSelfIntroduce
+// @Summary 更新用户自我介绍
+// @Description 用户更新自我介绍信息接口（需Token认证）
+// @Tags User Home Message
+// @Param selfIntroduce formData string true "用户自我介绍内容"
+// @Param id     formData string true "用户id"
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Success 200 {string} json{"code", "id","message"}
+// @Failure 400 {string} json{"code", "id","message"}
+// @Failure 500 {string} json{"code", "id","message"}
+// @Router /user/upload_self-introduce [post]
+func UploadSelfIntroduce(c *gin.Context) {
+	ItemUserTokenBasicInfo, err := VerifyToken(c)
+	if err != nil {
+		return
+	}
+	ISelfIntroduce, err1 := c.GetPostForm("selfIntroduce")
+	if !err1 {
+		log.Println("缺少请求参数")
+		c.JSON(http.StatusBadRequest, gin.H{"code": -1, "id": ItemUserTokenBasicInfo.UserId, "message": "缺少请求参数"})
+		return
+	}
+	err = UpdateOrCreateSelfIntroduce(ItemUserTokenBasicInfo, ISelfIntroduce)
+	if err != nil {
+		log.Println("<UNK>", err)
+		c.JSON(http.StatusInternalServerError, gin.H{"code": 0, "id": ItemUserTokenBasicInfo.UserId, "message": "服务器错误！"})
+		return
+	}
+	c.JSON(200, gin.H{"code": 1, "id": ItemUserTokenBasicInfo.UserId, "message": "更新自我介绍成功！"})
+	return
+}
+
+func UpdateOrCreateSelfIntroduce(PUserTokenBasicInfo crypt.UserTokenBasicInfo, PSelfIntroduce string) error {
+	IUserId, _ := strconv.Atoi(PUserTokenBasicInfo.UserId)
+	_, Num := model.FindUserHomePageInfoByUserId(uint(IUserId))
+	if Num == 0 {
+		model.CreateUserHomePageInfo(model.UserHomePageInfo{
+			UserID:        uint(IUserId),
+			UserName:      PUserTokenBasicInfo.UserName,
+			SelfIntroduce: PSelfIntroduce,
+		})
+		return nil
+	}
+	if Num == 1 {
+		err := model.UpdateSlfIntroduceById(uint(IUserId), PSelfIntroduce)
+		if err != nil {
+			log.Println("更新数据库自我介绍失败", err)
+			return err
+		}
+	}
+	return nil
+}
